--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.1'
 services:
   mongo:
     image: mongo
+    container_name: mrp_mongo
     restart: always
     ports:
       - 27017:27017
@@ -12,6 +13,7 @@ services:
 
   mongo-express:
     image: mongo-express
+    container_name: mrp_mongo_express
     restart: always
     ports:
       - 8081:8081
