--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,9 @@ phases:
   install:
     runtime-versions:
       java: corretto17
+  pre_build:
+    commands:
+      - docker-compose up
   build:
     commands:
       - mvn clean install
