--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     banner-mode: off
   data:
     mongodb:
-      host: localhost
+      host: 172.17.0.1
       port: 27017
       database: mrp
       username: mrp-user
